[gd_scene load_steps=11 format=2]

[ext_resource path="res://Cabbage.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/Cabbage/cabbage_1.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 46.5, 42.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 193.75, 18 )

[sub_resource type="CircleShape2D" id=16]
radius = 47.0425

[node name="Cabbage" type="KinematicBody2D" groups=["Enemies"]]
position = Vector2( 351, 280 )
script = ExtResource( 2 )

[node name="Walking" type="AnimatedSprite" parent="."]
position = Vector2( 0, -27 )
frames = SubResource( 3 )
frame = 3
speed_scale = 1.2
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -21.5 )
shape = SubResource( 15 )

[node name="AggroArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
position = Vector2( 195.25, -3 )
shape = SubResource( 2 )

[node name="Deathspot" type="Area2D" parent="."]
position = Vector2( 93.25, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathspot"]
position = Vector2( -94.25, -44 )
shape = SubResource( 16 )

[node name="Deathtimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
[connection signal="body_exited" from="AggroArea" to="." method="_on_AggroArea_body_exited"]
[connection signal="area_entered" from="Deathspot" to="." method="_on_Deathspot_area_entered"]
[connection signal="timeout" from="Deathtimer" to="." method="_on_Deathtimer_timeout"]
